# synthfin-core

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CALIBRATION_PROCESS.md  CLAUDE.md  Dockerfile  Dockerfile.stream  IMPROVEMENT_ANALYSIS.md  LICENSE  ORGANIZATION_SUMMARY.txt  PHASE_2_1_INTEGRATION_COMPLETE.md  PHASE_2_GUIDE.md  README.md  REALISM_METRICS.json  STATUS_FINAL.md  VERSION  benchmark_phase_2.py  check_schema.py  docker-compose.yml  generate.py  ia-agent-norte.md  pyproject.toml  requirements-api.txt  requirements-streaming.txt  requirements.txt  stream.py  validate_realism.py
.claude/: settings.json
.github/: copilot-instructions.md
agent-ia/: 00-ORQUESTRADOR.md  01-ANALYTICS-AGENT.md  02-DATA-GENERATOR-AGENT.md  03-FRAUD-PATTERN-ENGINEER.md  04-PERFORMANCE-OPTIMIZER.md  05-DOCKER-INFRA-AGENT.md  06-DOCUMENTATION-KEEPER.md  07-TEST-COVERAGE-AGENT.md  08-MARKET-RESEARCH-AGENT.md  09-CONFIG-ARCHITECT.md  10-CICD-SPECIALIST.md  11-EXPLORER-AGENT.md  12-DATA-QUALITY-ANALYST.md  README.md
benchmark_results/: benchmark_results.json
benchmarks/: BENCHMARK_RESULTS.md  PHASE_2_1_BENCHMARK_RESULTS.txt  comprehensive_benchmark.py  comprehensive_results.json  comprehensive_results.md  data_quality_benchmark.py  format_benchmark.py  format_benchmark_results.json  multiprocessing_benchmark.py  multiprocessing_results.json  phase_2_1_compression_benchmark.py  quality_results.json  streaming_benchmark.py
docs/: 01_VISAO_GERAL.md  02_GUIA_GERACAO.md  03_ARQUITETURA_TECNICA.md  04_API_RAG_REFERENCIA.md  05_NOTEBOOKS_CALIBRACAO.md  06_STACK_TECNOLOGICO.md  (+19 more)
(+226 files in other folders)
