[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-generator"
version = "4.9.0"
description = "Brazilian fraud data generator for ML and testing"
requires-python = ">=3.10"
dependencies = [
    "faker>=24.0.0",
    "numpy>=1.26.0",
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["fraud_generator.api*", "fraud_generator.email*"]
