[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthfin-data"
version = "4.17"
description = "Synthetic fraud data generator for Brazilian banking, PIX and ride-share systems"
requires-python = ">=3.10"
dependencies = [
    "faker>=24.0.0",
    "numpy>=1.26.0",
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["fraud_generator.api*", "fraud_generator.email*"]
